--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,15 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./app:/usr/share/nginx/html
+      - ./dh-param/dhparam-2048.pem:/etc/ssl/certs/dhparam-2048.pem
+      - /docker-volumes/etc/letsencrypt/live/qualime.com.br/fullchain.pem:/etc/letsencrypt/live/qualime.com.br/fullchain.pem
+      - /docker-volumes/etc/letsencrypt/live/qualime.com.br/privkey.pem:/etc/letsencrypt/live/qualime.com.br/privkey.pem
 
     working_dir: /usr/share/nginx/html
 
     ports:
       - ${APP_PORT}:80
+      - ${SSL_APP_PORT}:443
 
     networks:
       - qualime
