--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,77 @@
 server {
-    listen 80;
+    listen      80;
     listen [::]:80;
     server_name qualime.com.br www.qualime.com.br;
 
+    location / {
+        rewrite ^ https://$host$request_uri? permanent;
+    }
+
+    #for certbot challenges (renewal process)
     location ~ /.well-known/acme-challenge {
         allow all;
-        root /usr/share/nginx/html;
+        root /data/letsencrypt;
     }
+}
+
+#https://qualime.com.br
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name qualime.com.br;
+
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/ohhaithere.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ohhaithere.com/privkey.pem;
+
+    ssl_buffer_size 8k;
+
+    ssl_dhparam /etc/ssl/certs/dhparam-2048.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+    ssl_prefer_server_ciphers on;
+
+    ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+
+    ssl_ecdh_curve secp384r1;
+    ssl_session_tickets off;
+
+    # OCSP stapling
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 8.8.8.8;
+
+    return 301 https://www.qualime.com.br$request_uri;
+}
+
+#https://www.qualime.com.br
+server {
+    server_name www.qualime.com.br;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+
+    server_tokens off;
+
+    ssl on;
+
+    ssl_buffer_size 8k;
+    ssl_dhparam /etc/ssl/certs/dhparam-2048.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+
+    ssl_ecdh_curve secp384r1;
+    ssl_session_tickets off;
+
+    # OCSP stapling
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 8.8.8.8 8.8.4.4;
+
+    ssl_certificate /etc/letsencrypt/live/ohhaithere.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ohhaithere.com/privkey.pem;
 
     root /usr/share/nginx/html;
     index index.html;
