--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,23 @@
-APP_PORT=80
-SSL_APP_PORT=443
+# MONGO
+MONGO_INITDB_DATABASE=mongo
+MONGO_INITDB_ROOT_USERNAME=backend
+MONGO_INITDB_ROOT_PASSWORD=beeUpPass
+MONGO_PORT=27017
+# MONGO-EXPRESS
+ME_CONFIG_BASICAUTH_USERNAME=beeUp
+ME_CONFIG_BASICAUTH_PASSWORD=beeUpPass
+ME_CONFIG_MONGODB_ADMINUSERNAME=backend
+ME_CONFIG_MONGODB_ADMINPASSWORD=beeUpPass
+ME_CONFIG_MONGODB_SERVER=mongo
+ME_CONFIG_PORT=8081
+# APP
+REACT_APP_API_DOMAIN=qualime.com.br
+REACT_APP_PORT=80
+REACT_APP_SSL_PORT=443
+# API
+API_PORT=9090
+# MAIL SETTINGS
+MAIL_USER=user@example.com
+MAIL_PASS=put-pass-here
+# AUTHENTICATION
+SECRET=4xaLZBfBqFyLvvHjH5aMkLS3Chvb25Te
