--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,72 @@
 version: '3.7'
 
 services:
+  mongo:
+    image: mongo
+
+    environment:
+      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+
+    networks:
+      - qualime
+
+    ports:
+      - ${MONGO_PORT}:${MONGO_PORT}
+
+    volumes:
+      - qualime_db_mongo:/data/db
+
+  mongo-express:
+    image: mongo-express
+
+    restart: unless-stopped
+
+    ports:
+      - ${ME_CONFIG_PORT}:${ME_CONFIG_PORT}
+
+    environment:
+      ME_CONFIG_BASICAUTH_USERNAME: ${ME_CONFIG_BASICAUTH_USERNAME}
+      ME_CONFIG_BASICAUTH_PASSWORD: ${ME_CONFIG_BASICAUTH_PASSWORD}
+      ME_CONFIG_MONGODB_PORT: ${MONGO_PORT}
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${ME_CONFIG_MONGODB_ADMINUSERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${ME_CONFIG_MONGODB_ADMINPASSWORD}
+      ME_CONFIG_MONGODB_SERVER: ${ME_CONFIG_MONGODB_SERVER}
+
+    depends_on:
+      - mongo
+
+    networks:
+      - qualime
+
+  api:
+    build:
+      context: ./dockerfiles/api
+
+    image: qualime/api
+
+    container_name: qualime-api
+
+    volumes:
+      - ./api:/api
+      - /api/node_modules
+
+    working_dir: /api
+
+    ports:
+      - ${API_PORT}:${API_PORT}
+
+    environment:
+      API_PORT: ${API_PORT}
+      REACT_APP_API_DOMAIN: ${REACT_APP_API_DOMAIN}
+      MONGO_PORT: ${MONGO_PORT}
+
+    command: ./entrypoints/entrypoint.sh
+
+    networks:
+      - qualime
+
   app:
     build:
       context: ./dockerfiles/app
@@ -19,11 +85,14 @@ services:
     working_dir: /usr/share/nginx/html
 
     ports:
-      - ${APP_PORT}:80
-      - ${SSL_APP_PORT}:443
+      - ${REACT_APP_PORT}:80
+      - ${REACT_APP_SSL_PORT}:443
 
     networks:
       - qualime
+
+volumes:
+  qualime_db_mongo:
 
 networks:
   qualime:
