--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,12 @@
 upstream api {
-    server qualime.com.br:8000;
+    server api:9090;
 }
 
 server {
     listen      80;
     listen [::]:80;
     server_name qualime.com.br www.qualime.com.br;
-    
+
     location ~ /api/(?<url>.*) {
         proxy_pass http://api/$url;
         proxy_http_version 1.1;
@@ -26,37 +26,6 @@ server {
         root /data/letsencrypt;
     }
 }
-
-#https://qualime.com.br
-#server {
-#    listen 443 ssl http2;
-#    listen [::]:443 ssl http2;
-#    server_name qualime.com.br;
-#
-#    server_tokens off;
-#
-#    ssl_certificate /etc/letsencrypt/live/qualime.com.br/fullchain.pem;
-#    ssl_certificate_key /etc/letsencrypt/live/qualime.com.br/privkey.pem;
-#
-#    ssl_buffer_size 8k;
-#
-#    ssl_dhparam /etc/ssl/certs/dhparam-2048.pem;
-#
-#    ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
-#    ssl_prefer_server_ciphers on;
-#
-#    ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
-#
-#    ssl_ecdh_curve secp384r1;
-#    ssl_session_tickets off;
-#
-#    # OCSP stapling
-#    ssl_stapling on;
-#    ssl_stapling_verify on;
-#    resolver 8.8.8.8;
-#
-#    return 301 https://www.qualime.com.br$request_uri;
-#}
 
 #https://www.qualime.com.br
 server {
